# computergraphics

Assignment1/: .gitignore  CMakeLists.txt  report.aux  report.tex
Assignment1-2/: CMakeLists.txt  README.md  SET UP.md
Assignment1-2/headers/: mesh.h  model.h
Assignment1-2/shaders/: fragment.glsl
Assignment1-2/src/: check_bbox.cpp  check_mesh.cpp  main.cpp  mesh.cpp  model.cpp
Assignment1/headers/: camera.h  mesh.h  model.h
Assignment1/include/glad/: glad.h
Assignment1/shaders/: fragment.glsl  vertex.glsl
Assignment1/src/: glad.c  main.cpp  mesh.cpp  model.cpp
